Finish layout and routes

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,3 +1,5 @@
+/* リスト 5.19: アプリケーション固有のCSS用マニフェストファイル */
+
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
