Make a basic User model (including secure passwords)

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,9 +1,13 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+/* -------------------------------------------------------- */
+
 /* mixins, variables, etc. */
 
 $gray-medium-light: #eaeaea;
+
+/* -------------------------------------------------------- */
 
 /* 全ページ共通 */
 
@@ -25,6 +29,8 @@ textarea {
     margin-bottom: 10px;
   }
 }
+
+/* -------------------------------------------------------- */
 
 /* タイポグラフィ（広告用語）*/
 // ① 活版による印刷術。 
@@ -55,6 +61,7 @@ p {
   line-height: 1.7em;
 }
 
+/* -------------------------------------------------------- */
 
 /* ヘッダー */
 
@@ -73,6 +80,8 @@ p {
     text-decoration: none;
   }
 }
+
+/* -------------------------------------------------------- */
 
 /* フッター */
 
@@ -101,3 +110,5 @@ footer {
     }
   }
 }
+
+/* -------------------------------------------------------- */
