--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -206,6 +206,20 @@ input {
 
 /* -------------------------------------------------------- */
 
+/* ユーザ一覧画面 */
+
+.users {
+  list-style: none;
+  margin: 0;
+  li {
+    overflow: auto;
+    padding: 10px 0;
+    border-bottom: 1px solid $gray-lighter;
+  }
+}
+
+/* -------------------------------------------------------- */
+
 /* miscellaneous */
 
 .debug_dump {
